--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 # Mono auto generated files
 mono_crash.*
 
+# App settings
+appsettings.json
+appsettings.Development.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
